# upnetfabinv

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
src/upnetfabinv/: __init__.py  inventoryfacts.py
src/upnetfabinv/cli/: __init__.py
src/upnetfabinv/errors/: __init__.py  errors.py
src/upnetfabinv/inventory/: inventory.py
src/upnetfabinv/inventory/get_inventory/: __init__.py  inventory_renderer.py
src/upnetfabinv/inventory/group_vars/: get_group_vars.py  group_vars.py
src/upnetfabinv/resources/: config.py  netbox.py
src/upnetfabinv/shared_utils/: devices.py  fabric.py  interfaces.py  ip_addressing.py  leafs.py  mlag.py  node_groups.py  servers.py  shared_utils.py  spines.py  switches.py  tenants.py  vlans.py
src/upnetfabinv/utils/: __init__.py  get.py  get_all.py  get_all_items.py  get_item.py  ip_addressing.py  merge.py
src/uponu_dc_fab_inventory/: __init__.py  inventoryfacts.py
src/uponu_dc_fab_inventory/cli/: __init__.py  netbox.py
src/uponu_dc_fab_inventory/errors/: __init__.py  errors.py
src/uponu_dc_fab_inventory/inventory/: inventory.py
src/uponu_dc_fab_inventory/resources/: __init__.py  config.py  netbox.py
src/uponu_dc_fab_inventory/shared_utils/: __init__.py  base.py  devices.py  fabric.py  interfaces.py  ip_addressing.py  leafs.py  mlag.py  node_groups.py  servers.py  shared_utils.py  spines.py  tenants.py  vlans.py
src/uponu_dc_fab_inventory/utils/: __init__.py  get.py  get_all.py  get_all_items.py  get_item.py  ip_addressing.py  merge.py
tests/units/utils/: test_get_all_items.py
(+44 files in other folders)
