[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "upnetfabinv"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "pynetbox>=7.4.0",
    "deepmerge>=1.1.0",
    "PyYAML>=6.0.0",
    "click>=8.1"
]

[project.optional-dependencies]

dev = [
  "ruff>=0.7.4",
  "pytest-asyncio>=0.21.1",
  "pytest-cov>=4.1.0",
  "pytest-dependency",
  "pytest-html>=3.2.0",
  "pytest-metadata>=3.0.0",
  "pytest>=7.4.0",
]

[project.scripts]

upnetfabinv = "upnetfabinv.cli:cli"
